--- a/_config.yml
+++ b/_config.yml
@@ -94,9 +94,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "입시남"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
+  bio              : "입시정보 알리미"
   location         : "Somewhere"
   email            :
   links:
