--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ analytics:
 # Site Author
 author:
   name             : "입시남"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "https://i.pinimg.com/originals/73/50/0a/73500a148aefbee0215a8fbca5763795.gif"
   bio              : "입시정보 알리미"
   location         : "Somewhere"
   email            :
